--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 efectivas soluciones, la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco
                 entregar resultados, expandiendo mis
                 conocimientos de manera continua y consistente.</p>
-            <a href="#" class="btn" target="_blank">Descargar CV</a>
+            <a href="/imagesrh/Ricardo Hoyos CV - Blue.pdf" class="btn" target="_blank">Descargar CV</a>
         </div>
 
     </section>
@@ -234,7 +234,8 @@
                         hecho con
                         React Js</p>
                     <br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://651715a08d97920d0570f403--joyful-cranachan-0167ef.netlify.app/"
+                        class="btn">Visualizarlo</a>
                 </div>
             </div>
             <div class="box">
@@ -243,7 +244,7 @@
                     <i class="fas fa-star"></i>
                     <p>Renderizado y obtención de datos de<br> una API Rest externa. Aplicación de pokemón en React Js
                     </p><br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://rh-pokex.netlify.app/" class="btn">Visualizarlo</a>
                 </div>
             </div>
             <div class="box">
@@ -251,7 +252,7 @@
                 <div class="content">
                     <i class="fas fa-smile-wink"></i>
                     <p>Perfil profesional dinámico hecho en javascript.</p><br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://profile-rhdeveloper.netlify.app/" class="btn">Visualizarlo</a>
                 </div>
             </div>
             <div class="box">
@@ -260,7 +261,7 @@
                     <i class="fas fa-space-shuttle"></i>
                     <p>Renderizado de imágenes de una API Rest externa. Aplicación del mundo del multiverso de Ricky y
                         Morty. </p><br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://multiuniverso-rickyandmorty-rh.netlify.app/" class="btn">Visualizarlo</a>
                 </div>
             </div>
             <div class="box">
@@ -268,7 +269,7 @@
                 <div class="content">
                     <i class="fas fa-folder-plus"></i>
                     <p>Creación de un sistema archivos de datos, mediante un formulario de contacto.</p><br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://rh-crud-date.netlify.app/" class="btn">Visualizarlo</a>
                 </div>
             </div>
             <div class="box">
@@ -276,7 +277,7 @@
                 <div class="content">
                     <i class="fas fa-cloud-sun"></i>
                     <p>Aplicación web que describe el clima donde te encuentras mediante tu ubicación real.</p><br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://rh-weather-app.netlify.app/" class="btn">Visualizarlo</a>
                 </div>
             </div>
         </div>
@@ -303,7 +304,7 @@
                 <div class="content">
                     <i class="fas fa-pizza-slice"></i>
                     <p>One Page creado para ofrecer productos de una restaurant pizzerro hecho en JavaScript.</p><br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://rh-pag-food.netlify.app/" class="btn">Visualizarlo</a>
                 </div>
             </div>
             <div class="box">
@@ -327,7 +328,7 @@
                 <div class="content">
                     <i class="fas fa-suitcase-rolling"></i>
                     <p>Landing Page que brinda servcio de viajes hecho con JavaScript.</p><br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://developer-travel-city.netlify.app/" class="btn">Visualizarlo</a>
                 </div>
             </div>
             <div class="box">
@@ -336,7 +337,7 @@
                     <i class="fas fa-globe"></i>
                     <p>Multi Page para brindar servicios de desarrollo web hecho en HTML, CSS y JavaScript.</p>
                     <br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://www.ricardohoyoscode.com/" class="btn">Visualizarlo</a>
                 </div>
             </div>
         </div>
