--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <div class="content">
                     <i class="fas fa-laptop-code"></i>
                     <p>Portafolio profesional hecho con HTML, CSS y JavaScript.</p><br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://rh-porta2.netlify.app/" class="btn">Visualizarlo</a>
                 </div>
             </div>
             <div class="box">
