--- a/index.html
+++ b/index.html
@@ -57,12 +57,16 @@
                     ¡Contáctame y
                     conversemos sobre tu
                     proyecto!</p>
-                <a href="#about" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#about" class="facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#about" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="#about" class="linkedin" target="_blank"><i class="fas fa-envelope"></i></a>
-                <a href="#about" class="linkedin" target="_blank"><i class="fab fa-whatsapp"></i></a>
-
+                <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="linkedin"
+                    target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/Ricardohoyoscode/" class="facebook" target="_blank"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a href="https://github.com/ricardohoycode" class="linkedin" target="_blank"><i
+                        class="fab fa-github"></i></a>
+                <a href="https://www.ricardohoyoscode.com/" class="linkedin" target="_blank"><i
+                        class="fa-solid fa-globe"></i></a>
+                <a href="https://wa.me/51925417209?text=Hola%20RH%20Deseo%20información%20por%20favor" class="linkedin"
+                    target="_blank"><i class="fab fa-whatsapp"></i></a>
 
             </div>
 
@@ -81,7 +85,7 @@
         </div>
 
         <div class="content">
-            <h3>Bienvenidos a mi mundo <span>!</span></h3>
+            <h3>Bienvenidos a mi mundo<span>!</span></h3>
             <p>Soy Desarrollador Front End Freelancer, soy Peruano de nacimiento y presento mi formación profesional al
                 desarrollo de
                 páginas web, aplicaciones de escritorio y portafolios profesionales. <br> Mi pasión de brindar buenas y
