--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 efectivas soluciones, la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco
                 entregar resultados, expandiendo mis
                 conocimientos de manera continua y consistente.</p>
-            <a href="/imagesrh/Ricardo Hoyos CV - Blue.pdf" class="btn" target="_blank">Descargar CV</a>
+            <a href="/imagesrh/Ricardo Martin Hoyos Bancho - CV 💼 .pdf" class="btn" target="_blank">Descargar CV</a>
         </div>
 
     </section>
