coffe-link- modification

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <div class="content">
                     <i class="fas fa-mug-hot"></i>
                     <p>One Page con temática cafetera hecho en JavaScript.</p><br>
-                    <a href="#" class="btn">Visualizarlo</a>
+                    <a href="https://coffe-rh-site.netlify.app/" class="btn">Visualizarlo</a>
                 </div>
             </div>
             <div class="box">
