--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- custom css file link  -->
   <link rel="shortcut icon" href="/images/RICARDO - EMOJI.png">
-  <link rel="stylesheet" href="/css/estiloejemplo.css">
+  <link rel="stylesheet" href="/css/estilosrh.css">
 
 </head>
 
