imgs-index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
   <!-- custom css file link  -->
-  <link rel="shortcut icon" href="/images/RICARDO - EMOJI.png">
+  <link rel="shortcut icon" href="/imagesrh/RICARDO - EMOJI.png">
   <link rel="stylesheet" href="/css/estilosrh.css">
 
 </head>
@@ -24,7 +24,7 @@
 
     <section class="flex">
 
-      <a href="#home" class="logo"><img src="/images/logorh.png" alt=""></a>
+      <a href="#home" class="logo"><img src="/imagesrh/logorh.png" alt=""></a>
 
       <nav class="navbar">
         <a href="#home">inicio</a>
@@ -75,7 +75,7 @@
   <section class="about" id="about">
 
     <div class="image">
-      <img src="/images/development.png" alt="">
+      <img src="/imagesrh/development.png" alt="">
     </div>
 
     <div class="content">
@@ -86,7 +86,7 @@
         efectivas soluciones, la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco
         entregar resultados, expandiendo mis
         conocimientos de manera continua y consistente.</p>
-      <a href="#" class="btn" target="_blank">Descargar CV</a>
+      <a href="#contact" class="btn" target="_blank">Convercemos</a>
     </div>
 
   </section>
@@ -98,14 +98,14 @@
   <section class="facility" id="facility">
 
     <div class="heading">
-      <img src="images/heading-img.png" alt="">
+      <img src="imagesrh/heading-img.png" alt="">
       <h3>Lo que puedo hacer!</h3>
     </div>
 
     <div class="box-container">
 
       <div class="box">
-        <img src="/images/website.jpg" alt="">
+        <img src="/imagesrh/website.jpg" alt="">
         <h3>Maquetación y Creación web de Cero</h3>
         <p>Construimos sitios web personalizados desde cero. Nuestra experiencia en diseño y desarrollo garantiza
           <span>sitios
@@ -114,7 +114,7 @@
       </div>
 
       <div class="box">
-        <img src="images/laptop-vector.png" alt="">
+        <img src="imagesrh/laptop-vector.png" alt="">
         <h3>Creación de Portfolios profesionales</h3>
         <p>Creamos portafolios impresionantes que resaltan tu trabajo. Nuestro <span>diseño personalizado y enfoque
             creativo</span>
@@ -122,7 +122,7 @@
       </div>
 
       <div class="box">
-        <img src="images/3.jpg" alt="">
+        <img src="imagesrh/3.jpg" alt="">
         <h3>Desarrollo web para ventas</h3>
         <p>Impulsamos tus ventas en línea. Nuestros servicios de diseño web optimizado para ventas <span>aumentan la
             conversión y mejoran la experiencia del cliente</span> , impulsando el crecimiento de tu negocio.
@@ -130,7 +130,7 @@
       </div>
 
       <div class="box">
-        <img src="images/4.svg" alt="">
+        <img src="imagesrh/4.svg" alt="">
         <h3>OnePage - landingPage</h3><br>
         <p>Cautiva a tu audiencia con páginas únicas y efectivas. Diseñamos one pages y landing pages de alto impacto
           que <span>convierten visitantes en clientes</span>. ¡Eleva tu presencia en línea hoy.!</p>
@@ -150,7 +150,7 @@
 
       <h3> Creamos tu Sitio Web</h3>
 
-      <a href="#" class="btn">Ver más</a>
+      <a href="https://www.ricardohoyoscode.com/" class="btn" target="_blank">Ver más</a>
     </form>
 
   </section>
@@ -163,14 +163,14 @@
   <section class="menu" id="menu">
 
     <div class="heading">
-      <img src="images/heading-img.png" alt="">
+      <img src="imagesrh/heading-img.png" alt="">
       <h3>Otros Servicios</h3>
     </div>
 
     <div class="box-container">
 
       <div class="box">
-        <img src="/images/5.png" alt="">
+        <img src="/imagesrh/5.png" alt="">
         <h3>Manejo de Redes sociales</h3>
         <p><span>Potenciamos tu presencia en línea</span> . Nuestros expertos en manejo de redes sociales crean
           contenido cautivador,
@@ -180,7 +180,7 @@
       </div>
 
       <div class="box">
-        <img src="images/6.jpg" alt="">
+        <img src="imagesrh/6.jpg" alt="">
         <h3>Branding</h3>
         <p>Elevamos tu marca a nuevas alturas. Nuestros servicios de manejo de branding <span>moldean una identidad
             sólida y
@@ -190,7 +190,7 @@
       </div>
 
       <div class="box">
-        <img src="images/7.jpg" alt="">
+        <img src="imagesrh/7.jpg" alt="">
         <h3>Posicionamiento SEO</h3>
         <p>Destaca en los motores de búsqueda con nuestro servicio de posicionamiento SEO. Optimizamos tu sitio web,
           contenido y estrategia para <span>alcanzar las primeras posiciones</span>. Aumenta tu visibilidad en línea y
@@ -209,12 +209,12 @@
   <!--gallery/project section starts -->
   <section class="projects" id="projects">
     <div class="heading">
-      <img src="images/heading-img.png" alt="">
+      <img src="imagesrh/heading-img.png" alt="">
       <h3>Aplicaciones</h3>
     </div>
     <div class="box-container">
       <div class="box">
-        <img src="/images/api-lista.jpeg" alt="">
+        <img src="/imagesrh/api-lista.jpeg" alt="">
         <div class="content">
           <i class="fas fa-list"></i>
           <p>Si tienes tareas por hacer y no sabes por donde empezar, puedes administrarlos con esta Api-List hecho con
@@ -224,7 +224,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/pokemonesimg.jpeg" alt="">
+        <img src="/imagesrh/pokemonesimg.jpeg" alt="">
         <div class="content">
           <i class="fas fa-star"></i>
           <p>Renderizado y obtención de Datos de<br> una API Rest externa. Aplicación de Pokemón en React Js</p><br>
@@ -232,7 +232,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/perfil-github-A1.jpg" alt="">
+        <img src="/imagesrh/perfil-github-A1.jpg" alt="">
         <div class="content">
           <i class="fas fa-smile-wink"></i>
           <p>Perfil profesional dinámico hecho en javascript.</p><br>
@@ -240,7 +240,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/rickyymorty.jpeg" alt="">
+        <img src="/imagesrh/rickyymorty.jpeg" alt="">
         <div class="content">
           <i class="fas fa-space-shuttle"></i>
           <p>Renderizado de imágenes de una API Rest externa. Aplicación del mundo del multiverso de Ricky y
@@ -249,7 +249,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/crud.jpeg" alt="">
+        <img src="/imagesrh/crud.jpeg" alt="">
         <div class="content">
           <i class="fas fa-folder-plus"></i>
           <p>Creación de un sistema archivos de datos, mediante un formulario de contacto.</p><br>
@@ -257,7 +257,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/weather.jpg" alt="">
+        <img src="/imagesrh/weather.jpg" alt="">
         <div class="content">
           <i class="fas fa-cloud-sun"></i>
           <p>Aplicación web que describe el clima donde te encuentras mediante tu ubicación real.</p><br>
@@ -271,12 +271,12 @@
   <!--gallery/project section starts -->
   <section class="projects" id="projects">
     <div class="heading">
-      <img src="images/heading-img.png" alt="">
+      <img src="imagesrh/heading-img.png" alt="">
       <h3>Páginas Web</h3>
     </div>
     <div class="box-container">
       <div class="box">
-        <img src="/images/cafecito.jpg" alt="">
+        <img src="/imagesrh/cafecito.jpg" alt="">
         <div class="content">
           <i class="fas fa-mug-hot"></i>
           <p>One Page con temática cafetera hecho en JavaScript.</p><br>
@@ -284,7 +284,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/pizzaimg.jpg" alt="">
+        <img src="/imagesrh/pizzaimg.jpg" alt="">
         <div class="content">
           <i class="fas fa-pizza-slice"></i>
           <p>One Page creado para ofrecer productos de una restaurant pizzerro hecho en JavaScript.</p><br>
@@ -292,7 +292,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/desarrollowebrh.jpg" alt="">
+        <img src="/imagesrh/desarrollowebrh.jpg" alt="">
         <div class="content">
           <i class="fas fa-laptop-code"></i>
           <p>Portafolio profesional hecho con HTML y CSS.</p><br>
@@ -300,7 +300,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/ecommerceimg.jpg" alt="">
+        <img src="/imagesrh/ecommerceimg.jpg" alt="">
         <div class="content">
           <i class="fas fa-money-check-alt"></i>
           <p>Ecommerce para ventas de productos tecnológicos hecho en React Js..</p><br>
@@ -308,7 +308,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/travel-iquitos.jpg" alt="">
+        <img src="/imagesrh/travel-iquitos.jpg" alt="">
         <div class="content">
           <i class="fas fa-suitcase-rolling"></i>
           <p>Landing Page que brinda servcio de viajes hecho con JavaScript.</p><br>
@@ -316,7 +316,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/profile-pic (11).png" alt="">
+        <img src="/imagesrh/profile-pic (11).png" alt="">
         <div class="content">
           <i class="fas fa-globe"></i>
           <p>Multi Page para brindar servicios de desarrollo web hecho en HTML, CSS y JavaScript.</p>
@@ -325,7 +325,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/defita.jpg" alt="">
+        <img src="/imagesrh/defita.jpg" alt="">
         <div class="content">
           <i class="fas fa-cut"></i>
           <p>Portafolio profesional para brindar servicios de confección y costura hecho en HTML, CSS y JavaScript para
@@ -335,7 +335,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/hamburg.jpg" alt="">
+        <img src="/imagesrh/hamburg.jpg" alt="">
         <div class="content">
           <i class="fas fa-hamburger"></i>
           <p>Landing o Multi Page para brindar servicios de ventas de hamburguesa deliciosas hecho en HTML, CSS,
@@ -353,14 +353,14 @@
   <section class="contact" id="contact">
 
     <div class="heading">
-      <img src="images/heading-img.png" alt="">
+      <img src="imagesrh/heading-img.png" alt="">
       <h3>contáctame</h3>
     </div>
 
     <div class="row">
 
       <div class="image">
-        <img src="/images/contact-img.svg" alt="">
+        <img src="/imagesrh/contact-img.svg" alt="">
       </div>
 
       <form action="https://formsubmit.co/rhdesarrolloseo@gmail.com" method="post">
@@ -375,7 +375,7 @@
         </div>
         <textarea name="" placeholder="mensaje" required maxlength="1000" cols="30" rows="10"></textarea>
         <input type="submit" value="enviar" class="btn">
-        <input type="hidden" name='_next' value="http://127.0.0.1:5500/index.html#home" />
+        <input type="hidden" name='_next' value="https://rh-porta2.netlify.app/" />
         <input type="hidden" name='_captcha' value="false" />
         <input type="hidden" name="_autoresponse" value="Ricardo Hoyos te responderá lo más pronto posible.">
       </form>
