--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <a href="#home" class="logo"><img src="/imagesrh/logorh.png" alt=""></a>
 
       <nav class="navbar">
-        <a href="#home">inicio</a>
-        <a href="#about">sobre mi</a>
-        <a href="#facility">servicios</a>
+        <a href="#home" class="activo">Inicio</a>
+        <a href="#about">Sobre Mí</a>
+        <a href="#facility">Servicios</a>
         <a href="#projects">Aplicaciones y Webs</a>
-        <a href="#contact">contáctame</a>
+        <a href="#contact">Contáctame</a>
       </nav>
 
-      <div id="menu-btn" class="fas fa-bars"></div>
+      <div id="menu-bar" class="fas fa-bars"></div>
 
     </section>
 
@@ -55,11 +55,11 @@
         <p>Tienes un <span>emprendimiento</span> o <span>negocio</span>? <br> Lo puedo hacer realidad <br> ¡Contáctame y
           conversemos sobre tu
           proyecto!</p>
-        <a href="#about" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#about" class="facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="#about" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="#about" class="linkedin" target="_blank"><i class="fas fa-envelope"></i></a>
-        <a href="#about" class="linkedin" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/Ricardohoyoscode/" class="facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://github.com/ricardohoycode" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="#contact" class="linkedin" target="_blank"><i class="fas fa-envelope"></i></a>
+        <a href="https://wa.me/51925417209?text=Hola%20RH%20Deseo%20información%20por%20favor" class="linkedin" class="linkedin" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
 
       </div>
