--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="content">
         <h3>¡Hola!</h3>
         <h3><span>Soy</span> Ricardo Hoyos</h3>
-        <h2><span>Desarrollador Web | Freelancer</span></h2>
+        <h2><span>Desarrollador Web FrontEnd | FullStack</span></h2>
         <p>Tienes un <span>emprendimiento</span> o <span>negocio</span>? <br> Lo puedo hacer realidad <br> ¡Contáctame y
           conversemos sobre tu
           proyecto!</p>
@@ -80,7 +80,7 @@
 
     <div class="content">
       <h3>Bienvenidos a mi mundo <span>!</span></h3>
-      <p>Soy Desarrollador Front End Freelancer, soy Peruano de nacimiento y presento mi formación profesional al
+      <p>Soy Desarrollador FrontEnd 1 FullStack, soy Peruano de nacimiento y presento mi formación profesional al
         desarrollo de
         páginas web, aplicaciones de escritorio y portafolios profesionales. <br> Mi pasión de brindar buenas y
         efectivas soluciones, la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco
