--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="content">
       <h3>Bienvenidos a mi mundo <span>!</span></h3>
-      <p>Soy Desarrollador FrontEnd 1 FullStack, soy Peruano de nacimiento y presento mi formación profesional al
+      <p>Soy Desarrollador FrontEnd | FullStack, soy Peruano de nacimiento y presento mi formación profesional al
         desarrollo de
         páginas web, aplicaciones de escritorio y portafolios profesionales. <br> Mi pasión de brindar buenas y
         efectivas soluciones, la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco
