--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="content">
         <h3>¡Hola!</h3>
         <h3><span>Soy</span> Ricardo Hoyos</h3>
-        <h2><span>Desarrollador Web FrontEnd | FullStack</span></h2>
+        <h2><span>Desarrollador Web FullStack</span> <br> con Especialización en Front-End </h2>
         <p>Tienes un <span>emprendimiento</span> o <span>negocio</span>? <br> Lo puedo hacer realidad <br> ¡Contáctame y
           conversemos sobre tu
           proyecto!</p>
