--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           proyecto!</p>
         <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://www.facebook.com/Ricardohoyoscode/" class="facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://github.com/ricardohoycode" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
         <a href="#contact" class="linkedin" target="_blank"><i class="fas fa-envelope"></i></a>
-        <a href="https://wa.me/51925417209?text=Hola%20RH%20Deseo%20información%20por%20favor" class="linkedin" class="linkedin" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://wa.me/51925417209?text=Hola%20Ricardo%Hoyos%20Deseo%20información%20por%20favor%quiero%una%web" class="linkedin" class="linkedin" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
 
       </div>
