--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
         <h3>¡Hola!</h3>
         <h3><span>Soy</span> Ricardo Hoyos</h3>
         <h2><span>Desarrollador Web FullStack  <br> <p> con Especialización en <span> Front-End </span> </p> </h2>  </span> 
-        <p>Tienes un <span>emprendimiento</span> o <span>negocio</span>? <br> Lo puedo hacer realidad <br> ¡Contáctame y
-          conversemos sobre tu
-          proyecto!</p>
+         ¡Contáctame y
+          conversemos sobre mi perfil!</p>
         <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://www.facebook.com/Ricardohoyoscode/" class="facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
