--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h3>¡Hola!</h3>
         <h3><span>Soy</span> Ricardo Hoyos</h3>
         <h2><span>Desarrollador Web FullStack  <br> <p> con Especialización en <span> Front-End </span> </p> </h2>  </span> 
-         ¡Contáctame y
+         <p>¡Contáctame y
           conversemos sobre mi perfil!</p>
         <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://www.facebook.com/Ricardohoyoscode/" class="facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
