--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <img src="/imagesrh/contact-img.svg" alt="">
       </div>
 
-      <form action="https://formsubmit.co/rhdesarrolloseo@gmail.com" method="post">
+      <form action="https://formsubmit.co/rimaylu@gmail.com" method="post">
         <h3>puedes contáctarme aquí</h3>
         <div class="inputBox">
           <input type="text" placeholder="nombres" required maxlength="50">
