--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
          <p>¡Contáctame y
           conversemos sobre mi perfil!</p>
         <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206/" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.facebook.com/Ricardohoyoscode/" class="facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.linkedin.com/in/ricardo-mart%C3%ADn-hoyos-249b24206?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin" target="_blank"><i class="fab fa-github"></i></a>
         <a href="#contact" class="linkedin" target="_blank"><i class="fas fa-envelope"></i></a>
         <a href="https://wa.me/51925417209?text=Hola%20Ricardo%Hoyos%20Deseo%20información%20por%20favor%quiero%una%web" class="linkedin" class="linkedin" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -106,7 +105,7 @@
       <div class="box">
         <img src="/imagesrh/website.jpg" alt="">
         <h3>Maquetación y Creación web de Cero</h3>
-        <p>Construimos sitios web personalizados desde cero. Nuestra experiencia en diseño y desarrollo garantiza
+        <p>Desarrollo sitios web personalizados desde cero. Mi experiencia en diseño y desarrollo garantiza
           <span>sitios
             únicos y funcionales</span> que impulsarán tu presencia en línea y tu éxito.
         </p>
@@ -115,7 +114,7 @@
       <div class="box">
         <img src="imagesrh/laptop-vector.png" alt="">
         <h3>Creación de Portfolios profesionales</h3>
-        <p>Creamos portafolios impresionantes que resaltan tu trabajo. Nuestro <span>diseño personalizado y enfoque
+        <p>Portafolios impresionantes que resaltan tu trabajo. Nuestro <span>diseño personalizado y enfoque
             creativo</span>
           te ayudarán a destacar entre la competencia y cautivar a tu audiencia. ¡Potencia tu carrera hoy mismo!.</p>
       </div>
@@ -123,7 +122,7 @@
       <div class="box">
         <img src="imagesrh/3.jpg" alt="">
         <h3>Desarrollo web para ventas</h3>
-        <p>Impulsamos tus ventas en línea. Nuestros servicios de diseño web optimizado para ventas <span>aumentan la
+        <p>Impulso tus ventas en línea. Nuestros servicios de diseño web optimizado para ventas <span>aumentan la
             conversión y mejoran la experiencia del cliente</span> , impulsando el crecimiento de tu negocio.
         </p>
       </div>
@@ -171,7 +170,7 @@
       <div class="box">
         <img src="/imagesrh/5.png" alt="">
         <h3>Manejo de Redes sociales</h3>
-        <p><span>Potenciamos tu presencia en línea</span> . Nuestros expertos en manejo de redes sociales crean
+        <p><span>Potencia tu presencia en línea</span> . Manejo tus redes sociales creando
           contenido cautivador,
           interactúan con tu audiencia y optimizan tu estrategia digital. ¡Maximiza tu impacto en las redes con
           nosotros!.
@@ -181,9 +180,9 @@
       <div class="box">
         <img src="imagesrh/6.jpg" alt="">
         <h3>Branding</h3>
-        <p>Elevamos tu marca a nuevas alturas. Nuestros servicios de manejo de branding <span>moldean una identidad
+        <p>Elevo tu marca a nuevas alturas. Servicios de manejo de branding <span>moldean una identidad
             sólida y
-            atractiva</span>. Desde el diseño de logotipos hasta la estrategia de marca, estamos aquí para impulsar tu
+            atractiva</span>. Desde el diseño de logotipos hasta la estrategia de marca, estoy aquí para impulsar tu
           reconocimiento y reputación.
         </p>
       </div>
@@ -215,6 +214,7 @@
       <div class="box">
         <img src="/imagesrh/api-lista.jpeg" alt="">
         <div class="content">
+          <h3>Posicionamiento SEO</h3>
           <i class="fas fa-list"></i>
           <p>Si tienes tareas por hacer y no sabes por donde empezar, puedes administrarlos con esta Api-List hecho con
             React Js</p>
