--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <div class="box">
         <img src="/imagesrh/api-lista.jpeg" alt="">
         <div class="content">
-          <h3>Posicionamiento SEO</h3>
+          <p> API - LIST </p>
           <i class="fas fa-list"></i>
           <p>Si tienes tareas por hacer y no sabes por donde empezar, puedes administrarlos con esta Api-List hecho con
             React Js</p>
