--- a/index.html
+++ b/index.html
@@ -215,10 +215,8 @@
         <img src="/imagesrh/api-lista.jpeg" alt="">
         <div class="content">
           <p> API - LIST </p>
-          <i class="fas fa-list"></i>
           <p>Si tienes tareas por hacer y no sabes por donde empezar, puedes administrarlos con esta Api-List hecho con
-            React Js</p>
-          <br>
+            React Js <i class="fas fa-list"></i></p>
           <a href="https://vision-list-study.netlify.app/" class="btn" target="_blank">visualizarlo</a>
         </div>
       </div>
