--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
         <div class="content">
           <p> API - LIST </p>
           <p>Si tienes tareas por hacer y no sabes por donde empezar, puedes administrarlos con esta Api-List hecho con
-            React Js <i class="fas fa-list"></i></p>
-          <a href="https://vision-list-study.netlify.app/" class="btn" target="_blank">visualizarlo</a>
+            React Js</p>
+          <a href="https://vision-list-study.netlify.app/" class="btn" target="_blank">visualizarlo <i class="fas fa-list"></i></a>
         </div>
       </div>
       <div class="box">
