--- a/index.html
+++ b/index.html
@@ -214,10 +214,11 @@
       <div class="box">
         <img src="/imagesrh/api-lista.jpeg" alt="">
         <div class="content">
+          <i class="fas fa-list"></i>
           <p> API - LIST </p>
           <p>Si tienes tareas por hacer y no sabes por donde empezar, puedes administrarlos con esta Api-List hecho con
             React Js</p>
-          <a href="https://vision-list-study.netlify.app/" class="btn" target="_blank">visualizarlo <i class="fas fa-list"></i></a>
+          <a href="https://vision-list-study.netlify.app/" class="btn" target="_blank">visualizarlo</a>
         </div>
       </div>
       <div class="box">
