--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         efectivas soluciones, la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco
         entregar resultados, expandiendo mis
         conocimientos de manera continua y consistente.</p>
-      <a href="#contact" class="btn" target="_blank">Convercemos</a>
+      <a href="/Ricardo Martin Hoyos CV - 2024 💼.pdf" class="btn" target="_blank">Descargar CV</a>
     </div>
 
   </section>
