--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         efectivas soluciones, la demuestro en la ejecución de mi ejercicio profesional, en el cual siempre busco
         entregar resultados, expandiendo mis
         conocimientos de manera continua y consistente.</p>
-      <a href="/Ricardo Martin Hoyos CV - 2024 💼.pdf" class="btn" target="_blank">Descargar CV</a>
+      <a href="/Ricardo Martin Hoyos CV - 2024 💼.pdf" class="btn-download" target="_blank"><span>Descargar CV</span></a>
     </div>
 
   </section>
