Update-comments index.html

--- a/index.html
+++ b/index.html
@@ -402,7 +402,9 @@
         <div class="card__content">
           <span class="card__title">Desarrollador Full Stack Jr.</span>
           <span class="card__name">Yoelis Figueredo</span>
-          <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore provident non tempora odio est sunt, ipsum, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore provident non tempora odio est sunt, ipsum</p>
+          <p class="card__text">Conocí a Ricardo siendo tutor de él en Coderhouse y desde que empezamos a interactuar en el desarrollo de los trabajos prácticos me di cuenta que tenía mucho potencial como desarrollador front-end.
+Durante nuestro tiempo juntos, he tenido el privilegio de presenciar el excepcional empeño de su aprendizaje y dominio del lenguaje. A pesar de la virtualidad en la cual se ha dictado el curso, ha demostrado una curiosidad innata además de compromiso para profundizar en las complejidades de JavaScript explorando nuevas técnicas y bibliotecas.
+Lo que destaca en Ricardo es su capacidad para ir más allá de lo enseñado en clase. Siempre está buscando activamente oportunidades para ampliar su comprensión y aplicar conceptos avanzados en proyectos personales y prácticos.</p>
         <a href="https://www.linkedin.com/in/yoelysfigueredopadron/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
