Update-comments-2 index.html

--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
     <div class="swiper-wrapper">
 
       
+      
       <div class="card swiper-slide">
         <div class="card__image">
           <img src="/imagesrh/gabriel.jpeg" alt="card image">
@@ -403,8 +404,8 @@
           <span class="card__title">Desarrollador Full Stack Jr.</span>
           <span class="card__name">Yoelis Figueredo</span>
           <p class="card__text">Conocí a Ricardo siendo tutor de él en Coderhouse y desde que empezamos a interactuar en el desarrollo de los trabajos prácticos me di cuenta que tenía mucho potencial como desarrollador front-end.
-Durante nuestro tiempo juntos, he tenido el privilegio de presenciar el excepcional empeño de su aprendizaje y dominio del lenguaje. A pesar de la virtualidad en la cual se ha dictado el curso, ha demostrado una curiosidad innata además de compromiso para profundizar en las complejidades de JavaScript explorando nuevas técnicas y bibliotecas.
-Lo que destaca en Ricardo es su capacidad para ir más allá de lo enseñado en clase. Siempre está buscando activamente oportunidades para ampliar su comprensión y aplicar conceptos avanzados en proyectos personales y prácticos.</p>
+            He tenido el privilegio de presenciar el excepcional empeño de su aprendizaje y dominio del lenguaje.Ha demostrado una curiosidad innata además de compromiso para profundizar en las complejidades de JavaScript explorando nuevas técnicas y bibliotecas. Lo que destaca en Ricardo es su capacidad para ir más allá de lo enseñado en clase, demás de su excepcional habilidad técnicas.
+            </p>
         <a href="https://www.linkedin.com/in/yoelysfigueredopadron/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
@@ -424,27 +425,14 @@ Lo que destaca en Ricardo es su capacidad para ir más allá de lo enseñado en 
 
       <div class="card swiper-slide">
         <div class="card__image">
-          <img src="/imagesrh/francisco.jpeg" alt="card image">
+          <img src="/imagesrh/Brayan.jpg" alt="card image">
         </div>
 
         <div class="card__content">
-          <span class="card__title">Programador FullStack</span>
-          <span class="card__name">Francisco Pugh</span>
-          <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore provident non tempora odio est sunt, ipsum, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore provident non tempora odio est sunt, ipsum</p>
+          <span class="card__title">Ingeniero de Software</span>
+          <span class="card__name">Brayan Muñoz</span>
+          <p class="card__text">A Ricardo lo conozco del bootcamp en el que impartía clase, desde el momento en que lo conocí se pudo notar ese amor y pasión por la tecnología, lo que le gusta, es una persona curiosa que siempre está buscando superarse y salir adelante, de él lo caracteriza ese sentir por buscar lo desconocido y hacer que sea conocido, el aprendizaje es lo que lo mueve.</p>
           <a href="#" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-      </div>
-
-      <div class="card swiper-slide">
-        <div class="card__image">
-          <img src="/imagesrh/Adlai.jpeg" alt="card image">
-        </div>
-
-        <div class="card__content">
-          <span class="card__title">Employment Partnerships</span>
-          <span class="card__name">Adlai Bermejo</span>
-          <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore provident non tempora odio est sunt, ipsum, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit veritatis labore provident non tempora odio est sunt, ipsum</p>
-          <a href="https://www.linkedin.com/in/adlai-bermejo-785b15180/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
 
@@ -474,13 +462,13 @@ Lo que destaca en Ricardo es su capacidad para ir más allá de lo enseñado en 
       </div>
       <div class="card swiper-slide">
         <div class="card__image">
-          <img src="/imagesrh/brayan.jpeg" alt="card image">
+          <img src="/imagesrh/jonathan.jpg" alt="card image">
         </div>
 
         <div class="card__content">
-          <span class="card__title">Ingeniero de software</span>
-          <span class="card__name">Brayan Muñoz</span>
-          <p class="card__text">" Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis excepturi nihil aut, sit veritatis tempora eos eligendi? Praesentium fugit sunt fuga eaque ipsam, ipsa obcaecati aliquam voluptatem non voluptatibus veniam? "</p>
+          <span class="card__title">FullStack Developer Python</span>
+          <span class="card__name">Jonatan Di vincenzo </span>
+          <p class="card__text">"¡Tu portafolio es impresionante! Me encanta cómo has demostrado tu habilidad para crear sitios web de manera creativa y funcional. Tu atención al detalle y tu enfoque en la usabilidad son realmente destacables. Sin duda, tu talento y dedicación te harán destacar ante cualquier reclutador o empresa. ¡Sigue así y alcanzarás grandes logros en tu carrera como desarrollador web! "</p>
           <a href="https://www.linkedin.com/in/bsmq/" class="linkedin-swiper" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
